# serializer version: 1
# name: test_disabled_plugin_is_not_executed
  '''
  +----------------------------------------------------+
  | connection_name | parameters          | is_default |
  |-----------------+---------------------+------------|
  | test            | {'account': 'test'} | False      |
  +----------------------------------------------------+
  
  '''
# ---
# name: test_override_build_in_commands
  '''
  Outside command code
  +----------------------------------------------------+
  | connection_name | parameters          | is_default |
  |-----------------+---------------------+------------|
  | test            | {'account': 'test'} | False      |
  +----------------------------------------------------+
  
  '''
# ---
